tests/derive_compile_fail/generic_struct_rejected.stderr
error: FromRow does not support generic parameters
 --> tests/derive_compile_fail/generic_struct_rejected.rs:4:11
  |
4 | struct Bad<T> {
  |           ^
