tests/derive_compile_fail/generic_struct_rejected.rs
use snowflake_connector_rs::FromRow;

#[derive(FromRow)]
struct Bad<T> {
    value: T,
}

fn main() {}
